fix 02_our_app.mdx 2

--- a/pages/docker-workshop-ja/02_our_app.mdx
+++ b/pages/docker-workshop-ja/02_our_app.mdx
@@ -167,8 +167,7 @@ CLIやDocker Desktopを使ってコンテナを確認すると、少なくとも
 
 このセクションでは、Dockerfileを作成してイメージをビルドする基本的な手順を学びました。イメージをビルドした後、コンテナを起動し、アプリが動作していることを確認しました。
 
-Related information:
-
+関連情報:
  - [Dockerfileリファレンス](https://docs.docker.com/reference/dockerfile/)
  - [docker CLIリファレンス](https://docs.docker.com/reference/cli/docker/)
 
