05_persisting_data.mdx fix

--- a/pages/docker-workshop-ja/05_persisting_data.mdx
+++ b/pages/docker-workshop-ja/05_persisting_data.mdx
@@ -44,7 +44,7 @@ import { Tabs } from 'nextra/components'
 5. `docker ps --all` コマンドを使用してコンテナのIDを取得し、`docker rm -f <container-id>` コマンドでコンテナを削除します。
 
 
-## Container volumes
+## コンテナボリューム
 
 前の実験で確認したように、各コンテナは起動するたびにイメージの定義から開始されます。コンテナはファイルを作成、更新、削除できますが、コンテナを削除するとそれらの変更は失われ、Dockerはすべての変更をそのコンテナに隔離します。ボリュームを使えば、これを変更することができます。
 
